--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="ca">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Benvingut/da a Estadísticapp</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Preguntes d'Estadística</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inici</a></li>
+                <li><a href="about.html">Sobre Estadíssticapp</a></li>
+                <li><a href="education.html">Per a Docents</a></li>
+                <li><a href="pricing.html">Preus</a></li>
+                <li><a href="log-in.html">WorkSphere Pro</a></li>
+            </ul>
+        </nav>
+    </header>
 <body>
 
   <main class="inicio">
