--- a/theory/8.html
+++ b/theory/8.html
@@ -60,6 +60,7 @@
       <canvas id="pieChart"></canvas>
       <p>El <strong>Gràfic de Sectors</strong>, o "pastís", representa dades en forma de porcions d'un cercle. És ideal per mostrar proporcions i comparar parts d'un total.</p>
     </section>
+    <button id="next" class="botonPrincipal" onclick="window.location.href='../final.html';">Següent</button>
   </main>
   <script src="8script.js"></script>
 </body>
