--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="inicio">
     <h1>Benvingut/da a Estadísticapp</h1>
     <p>Descobreix i consolida conceptes de manera visual, interactiva i senzilla</p>
-    <button id="next" class="botonPrincipal" onclick="window.location.href='theory/1.html';">Començar</button>
+    <button id="next" class="botonPrincipal" onclick="window.location.href='https://pbfedu.github.io/estadisticapp/theory/1';">Començar</button>
 </main>
   <footer>
     <p>©2024 WorkSphere</p>
