--- a/theory/1.html
+++ b/theory/1.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- Botón de "Siguiente" que lleva a 2.html -->
-      <button id="botonPrincipal" class="botonPrincipal oculto" onclick="location.href='2.html'">Següent</button>
+      <button id="botonPrincipal" class="botonPrincipal oculto" onclick="location.href='https://pbfedu.github.io/estadisticapp/theory/2'">Següent</button>
     </div>
   </main>
 
