--- a/theory/2.html
+++ b/theory/2.html
@@ -43,7 +43,7 @@
           <h3>Mostra</h3>
           <div class="muestra-personas"></div>
           <p id="calidadMuestra">Qualitat de la mostra: 0%</p>
-          <button id="botonSiguiente" class="botonPrincipal oculto" onclick="location.href='3.html'">Següent</button>
+          <button id="botonSiguiente" class="botonPrincipal oculto" onclick="location.href='https://pbfedu.github.io/estadisticapp/theory/3'">Següent</button>
         </div>
       </div>
     </div>
