--- a/theory/3.html
+++ b/theory/3.html
@@ -56,7 +56,7 @@
         <li><strong>Variables Qualitatives:</strong> Són variables que no es poden mesurar numèricament, sinó que descriuen qualitats o característiques. Per exemple, el color d'ulls (blau, verd, marró) o el tipus de treball que fa una persona (metge, professor, enginyer). Aquestes variables es classifiquen en categories.</li>
     </ul>
     </div>
-    <button id="next" class="botonPrincipal" onclick="window.location.href='../license-required.html';">Següent</button>
+    <button id="next" class="botonPrincipal" onclick="window.location.href='https://pbfedu.github.io/estadisticapp/license-required';">Següent</button>
   </div>
   </main>
 
