--- a/theory/7.html
+++ b/theory/7.html
@@ -35,7 +35,7 @@
       <button class="btn" id="calculate-moda">Calcular Moda</button>
       <div class="results" id="moda-results"></div>
     </section>
-    <button id="next" class="botonPrincipal" onclick="window.location.href='8.html';">Següent</button>
+    <button id="next" class="botonPrincipal" onclick="window.location.href='https://pbfedu.github.io/estadisticapp/theory/8';">Següent</button>
   </main>
   <script src="7script.js"></script>
 </body>
