--- a/final.html
+++ b/final.html
@@ -105,7 +105,7 @@
     // Función para finalizar el curso
     function finishCourse() {
       alert("Felicitats! Has completat el curs. Redirigint");
-      window.location.href = "index.html"; // Redirigir a la página de inicio o a otro destino.
+      window.location.href = "https://pbfedu.github.io/estadisticapp/"; // Redirigir a la página de inicio o a otro destino.
     }
   </script>
 
