--- a/theory/6.html
+++ b/theory/6.html
@@ -74,7 +74,7 @@
             Amb aquests botons pots anar variant la quantitat de nombres que inclourà l'interval, ja que si, tots els intervals a una mateixa taula de freqüències han de ser del mateix nombre de nombres. No pots tenir un interval de 3 valors [1,4), un de 2 valors [4,7) i un d'1 valor [7,8].</p>
          
         </div>
-      <button id="botonSiguiente" class="botonPrincipal oculto" onclick="location.href='https://pbfedu.github.io/estadisticapp/theory/7'">Següent</button>
+      <button id="botonSiguiente" class="botonPrincipal oculto" onclick="location.href='https://pbfedu.github.io/estadisticapp/news'">Següent</button>
     </div>
   </main>
   <script src="6script.js"></script>
