--- a/news.html
+++ b/news.html
@@ -146,7 +146,7 @@
   <div class="promo-container">
     <div class="pro-message">
       <p>Si ets usuari Pro, ja tens accés a totes les novetats! Si no ho ets actualitza ara per obtenir les novetats.</p>
-      <a href="#">Actualitza ara</a>
+      <a href="https://pbfedu.github.io/estadisticapp/pricing">Actualitza ara</a>
     </div>
 
     <div class="novetats-list">
